improved background pictures and fixed problem with not work background-attachment: fixed; on IOS devises.

--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-attachment: fixed;
     margin: 10px 0px;
+    overflow: scroll;
+
 }
 .app-table {
     display: inline-flex;
@@ -52,6 +53,21 @@ main {
     align-items: center;
     text-align: center;
 }
+
+main .bg {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    transform: translateZ(0);
+    will-change: transform;
+    z-index: -1;
+}
+
 .location .city {
     color: white;
     font-size: 55px;
@@ -99,6 +115,7 @@ main {
     border-bottom: 1px solid rgba(255, 255, 255, 0.4);
     margin-top: 10px;
 }
+
 .forecast-container .forecast {
     display: table-cell;
     vertical-align: top; }
